<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".UI.MainActivity">

    <ListView
        android:id="@+id/restaurantListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="1dp"
        android:dividerHeight="10.0sp"
        android:paddingBottom="8dp"
        android:scrollbarSize="7dp"
        android:scrollbarThumbVertical="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtHazardLevel"
        android:layout_width="67dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:text="@string/hazard_rating"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/layoutHigh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layoutLow" />

    <LinearLayout
        android:id="@+id/layoutLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/border_green"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutHigh"
        app:layout_constraintStart_toEndOf="@+id/txtHazardLevel">

        <ImageView
            android:id="@+id/imgLow"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/hazard_low" />

        <TextView
            android:id="@+id/txtLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutHigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border_red"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/layoutLow">

        <ImageView
            android:id="@+id/imgHigh"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/hazard_high" />

        <TextView
            android:id="@+id/txtHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding="5dp"
        android:background="@drawable/border_yellow"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/layoutLow"
        app:layout_constraintStart_toEndOf="@+id/layoutLow"
        app:layout_constraintTop_toTopOf="@+id/layoutLow">

        <ImageView
            android:id="@+id/imgMedium"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/hazard_medium" />

        <TextView
            android:id="@+id/txtMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutNone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/border_blue"

        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/layoutHigh"
        app:layout_constraintStart_toEndOf="@+id/layoutHigh"
        app:layout_constraintTop_toTopOf="@+id/layoutHigh">

        <ImageView
            android:id="@+id/imgNone"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/not_available" />

        <TextView
            android:id="@+id/txtNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/layoutLow"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:text="Map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>