<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_green">

    <ImageView
        android:id="@+id/iconRestaurant"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:maxWidth="80dp"
        android:maxHeight="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRestaurentName"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cooking" />

    <TextView
        android:id="@+id/txtRestaurentName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/restaurent_name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/iconRestaurant"
        app:layout_constraintStart_toEndOf="@+id/iconRestaurant"
        app:layout_constraintTop_toTopOf="@+id/iconRestaurant">

        <ImageView
            android:id="@+id/iconHazard"
            android:layout_width="33dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/cancel_cutlery_white" />

        <TextView
            android:id="@+id/txtIssuesNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/of_issues"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/date"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/iconRestaurant"
        app:layout_constraintStart_toEndOf="@+id/iconRestaurant" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="231dp"
        android:text="@string/address"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iconRestaurant"
        app:layout_constraintTop_toTopOf="@+id/iconRestaurant" />

</androidx.constraintlayout.widget.ConstraintLayout>
